finished review and latest options i18n changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .bak/*.tgz
 **/node_modules/**
+NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/.yalc
+NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/yalc.lock
