finish project, removed clk-react-dynamic-form from project, now use clk bitbucket repo

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 **/node_modules/**
 NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/.yalc
 NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/yalc.lock
+NewRollUpClkReactDynamicForm/clk-react-dynamic-form-1.0.5-before-start-to-use-clk-repo
