--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .bak/*.tgz
 **/node_modules/**
+NewRollUpClkReactDynamicForm/clk-react-dynamic-form-1.0.5-before-start-to-use-clk-repo
 NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/.yalc
 NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/yalc.lock
-NewRollUpClkReactDynamicForm/clk-react-dynamic-form-1.0.5-before-start-to-use-clk-repo
+NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/.yalc/clk-react-dynamic-form
