--- a/NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/package.json
+++ b/NewRollUpClkReactDynamicForm/clk-react-dynamic-form-consumer-app/package.json
@@ -17,16 +17,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.119",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "babel-preset-react-app": "^10.0.1",
     "clk-react-dynamic-form": "file:.yalc/clk-react-dynamic-form",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-scripts": "^3.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
@@ -46,5 +39,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.8",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "install": "^0.13.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   }
 }
